--- a/app/views/detalle_producto/detalleProducto.module.css
+++ b/app/views/detalle_producto/detalleProducto.module.css
@@ -54,3 +54,25 @@
     font-size: 18px;
     margin: 5px 0;
 }
+
+.VolverHeader{
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    flex-direction: column;
+    padding: 20px;
+  }
+  .AHeader{
+    display: flex;
+    align-items: center;
+    margin-right: auto; 
+    color: black;
+  }
+  .categoriaTitle{
+    flex-grow: 1;
+    text-align: center;
+    margin: 0;
+    font-size: 1.5rem; 
+    font-weight: 600;
+}
