--- a/app/views/perfil/perfil.module.css
+++ b/app/views/perfil/perfil.module.css
@@ -107,7 +107,7 @@
   align-items: center;
   gap: 5px;
   padding: 15px;
-  background-color: #4246a8;
+  background-color: #b4b3b3;
   border-radius: 5px;
   text-decoration: none;
   color: white;
