--- a/app/views/tarjetas/tarjetas.module.css
+++ b/app/views/tarjetas/tarjetas.module.css
@@ -1,96 +1,93 @@
-.container {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #f9f9f9;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .title, .subtitle {
-    color: #333;
-    text-align: center;
-  }
-  
-  .cardList {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  .cardItem {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    margin: 10px 0;
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-  }
-  
-  .deleteButton {
-    background-color: #d9534f;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    padding: 5px 10px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
-  .deleteButton:hover {
-    background-color: #c9302c;
-  }
-  
-  .input {
-    width: calc(50% - 10px);
-    padding: 8px;
-    margin: 5px 0;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .input:focus {
-    border-color: #66afe9;
-    outline: none;
-  }
-  
-  .addButton {
-    margin-top: 10px;
-    background-color: #5cb85c;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    padding: 8px 15px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
-  .addButton:hover {
-    background-color: #4cae4c;
-  }
-  
-  .formContainer {
-    margin-top: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  
-  .confirmButton {
-    margin-top: 10px;
-    background-color: #5bc0de;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    padding: 8px 15px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
-  .confirmButton:hover {
-    background-color: #31b0d5;
-  }
+/* From Uiverse.io by vinodjangid07 */ 
+.visacard {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-end;
+  width: 300px;
+  height: 180px;
+  background-image: radial-gradient(
+    circle 897px at 9% 80.3%,
+    rgba(55, 60, 245, 1) 0%,
+    rgba(234, 161, 15, 0.9) 100.2%
+  );
+  border-radius: 10px;
+  padding: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  position: relative;
+  gap: 15px;
+}
+.logoContainer {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  height: fit-content;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 18px;
+}
+.svgLogo {
+  height: 40px;
+  width: auto;
+}
+.inputstyle::placeholder {
+  color: #ffffff;
+}
+.inputstyle {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  color: white;
+  caret-color: red;
+  font-size: 13px;
+  height: 25px;
+  letter-spacing: 1.5px;
+}
+.numbercontainer {
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+}
+#cardNumber {
+  width: 100%;
+  height: 25px;
+}
+.namedatecvvcontainer {
+  width: 100%;
+  height: 25px;
+  display: flex;
+  gap: 10px;
+}
+.namewrapper {
+  width: 60%;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+}
+.expirywrapper,
+.cvvwrapper {
+  width: 30%;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+}
+.cvvwrapper {
+  width: 10%;
+}
+#expiry,
+#cvv {
+  width: 100%;
+}
+.inputlabel {
+  font-size: 8px;
+  letter-spacing: 1.5px;
+  color: #e2e2e2;
+  width: 100%;
+}
+
   .VolverHeader{
     display: flex;
     width: 100%;
@@ -105,3 +102,82 @@
     margin-right: auto; 
     color: black;
   }
+
+
+  /* From Uiverse.io by vinodjangid07 */ 
+.InputContainerr {
+  height: 45px;
+  display: flex;
+  align-items: center;
+ gap: 20px;
+ justify-content: space-around;
+  background-color: rgb(8, 8, 8);
+  overflow: hidden;
+  padding: 0px 5px 0px 15px;
+  border: 1px solid rgba(255, 255, 255, 0.322);
+  border-radius: 10px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.075);
+  width: 90vw;
+}
+
+.inputt {
+  width: 170px;
+  height: 100%;
+  border: none;
+  outline: none;
+  font-size: 0.9em;
+  caret-color: rgb(255, 81, 0);
+  background-color: rgb(8, 8, 8);
+  font-weight: 600;
+  color: white;
+}
+
+.visaCardd {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 40px;
+  height: 25px;
+  background-color: rgb(8, 8, 8);
+  pointer-events: none;
+  border: 1px solid rgba(255, 255, 255, 0.068);
+  border-radius: 7px;
+}
+
+.papainpt{
+  display: flex;
+  justify-content: center;
+margin-top: 10px;
+}
+.txt{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+
+}
+.txtp{
+  display: flex;
+  justify-content: start;
+  margin-bottom: 10px;
+  padding: 20px;
+  font-weight: bold;
+
+}
+.separator {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  color: #acacac;
+  padding-top: .8rem;
+}
+
+.separator .line {
+  display: block;
+  width: 90vw;
+  height: 1px;
+  border: 0;
+  background-color: #9e9b9b;
+}
