--- a/app/views/principal/principal.module.css
+++ b/app/views/principal/principal.module.css
@@ -22,9 +22,10 @@
 }
 
 .img {
-    margin-bottom: 20px;
-    width: 100%;
-    height: 250px;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ width: 95%;
 }
 
 .h1 {
