--- a/app/views/resenias/resenias.module.css
+++ b/app/views/resenias/resenias.module.css
@@ -1,7 +1,3 @@
-.container {
-    padding: 20px;
-}
-
 .reseñasContainer {
     margin-top: 20px;
 }
@@ -11,19 +7,38 @@
     border-radius: 5px;
     padding: 10px;
     margin-bottom: 15px;
+    display: grid;
+    grid-template-columns: 1fr 1fr; /* Cambiar a una sola columna */
+    grid-template-rows: auto auto; /* Ajustar filas automáticamente */
+    grid-template-areas:
+        "texto"
+        "valoracion"
+        "comentario"; /* Añadir área para el comentario */
 }
 
+
+.comentario {
+    grid-area: comentario; /* Definir área para el comentario */
+    margin-top: 4px; /* Espacio superior para el comentario */
+    font-size: 1.2rem;
+ 
+   
+}
 .valoracion {
     color: #FFD700; /* Color dorado para las estrellas */
+    grid-area: valoracion;
+    font-size: 1.5rem;
 }
 
 .estrellaLlena {
     color: #FFD700;
+    
 }
 
 .estrellaVacia {
     color: #ccc; /* Color gris para las estrellas vacías */
 }
+
 .botonEditar, .botonBorrar {
     background-color: transparent;
     border: none;
@@ -47,6 +62,7 @@
     align-items: center;
     justify-content: center;
 }
+
 .botonEditar {
     background-color: blue;
     color: white;
@@ -64,4 +80,58 @@
 
 .botonEditar:hover, .botonBorrar:hover, .botonAgregar:hover {
     opacity: 0.8;
+}
+
+.container {
+    padding: 20px;
+    font-family: 'Arial', sans-serif;
+    color: #333;
+    background-color: #f8f9fa;
+}
+
+.VolverHeader {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    padding-bottom: 20px; 
+}
+
+.AHeader {
+    display: flex;
+    align-items: center;
+    color: black;
+    margin-right: auto;
+}
+
+.TituloCategorias {
+    flex-grow: 1;
+    text-align: center;
+    margin: 0;
+    font-size: 1.6rem; 
+}
+
+.reseñaHeader {
+    display: flex;
+    justify-content: space-between; /* Alinea el contenido de forma horizontal */
+    align-items: center; /* Centra verticalmente */
+}
+
+.botonContainer {
+    display: flex; /* Permite alinear los botones uno al lado del otro */
+    gap: 10px; /* Espaciado entre los botones */
+}
+
+.botonesK{
+    display: flex;
+    justify-content: flex-end;
+gap: 10px;
+}
+
+.texto{
+    grid-area: texto;
+    font-size: 1.3rem;
+}
+.asd{
+    text-align: center;
 }
